# GenAILocalBias

./: README.md
LMM_process/: call_lmms.py  pyproject.toml  questions.txt
Main_analysis/: analysis.R
Main_analysis/LMM_data/: houses_cars_per_image.csv
Main_analysis/Survey_data/: dmacs_data.csv  pilot_data_order_analysis.csv  pilot_data_power_analysis.csv
