[project]
name = "lmm-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.20"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alabaster==0.7.16",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "asttokens==2.4.1",
    "async-timeout==5.0.0",
    "attr==0.3.2",
    "attrs==24.2.0",
    "babel==2.16.0",
    "backports-tarfile==1.2.0",
    "brotli==1.1.0",
    "brotlicffi==1.1.0.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "colorama==0.4.6",
    "comm==0.2.2",
    "configparser==7.1.0",
    "cryptography==43.0.3",
    "decorator==5.1.1",
    "distro==1.9.0",
    "docutils==0.21.2",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fanstatic==1.4",
    "filelock==3.16.1",
    "fiona==1.10.1",
    "frozenlist==1.6.0",
    "fsspec==2024.10.0",
    "geographiclib==2.0",
    "geopandas==0.14.4",
    "geopy==2.4.1",
    "h11==0.14.0",
    "h2==4.1.0",
    "haversine==2.8.1",
    "hpack==4.0.0",
    "htmlparser==0.0.2",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "huggingface-hub==0.26.2",
    "hyperframe==6.0.1",
    "idna==3.10",
    "imageio==2.36.0",
    "imagesize==1.4.1",
    "importlib-metadata==8.5.0",
    "ipython==8.18.1",
    "ipywidgets==8.1.5",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jiter==0.7.0",
    "js==1.0",
    "jupyterlab-widgets==3.0.13",
    "keyring==25.5.0",
    "lazy-loader==0.4",
    "mapbox-vector-tile==2.1.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mercantile==1.2.1",
    "more-itertools==10.5.0",
    "mpmath==1.3.0",
    "multidict==6.4.3",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "openai==1.54.0",
    "osmnx==1.9.4",
    "packaging==24.1",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "prompt-toolkit==3.0.48",
    "propcache==0.3.1",
    "protobuf==5.28.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pyclipper==1.3.0.post6",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pygments==2.18.0",
    "pyjnius==1.6.1",
    "pyopenssl==24.2.1",
    "pyproj==3.6.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "redis==5.2.0",
    "regex==2024.9.11",
    "requests==2.32.3",
    "rich==13.9.4",
    "rtree==1.3.0",
    "safetensors==0.4.5",
    "scikit-image==0.24.0",
    "scipy==1.13.1",
    "shapely==2.0.6",
    "shellingham==1.5.4",
    "simplejson==3.19.3",
    "six==1.16.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "sphinx==7.4.7",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "thread==2.0.5",
    "tifffile==2024.8.30",
    "together==1.4.6",
    "tokenizers==0.20.2",
    "tomli==2.0.2",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.66.6",
    "traitlets==5.14.3",
    "transformers==4.46.1",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "urllib3-secure-extra==0.1.0",
    "vt2geojson==0.2.1",
    "wcwidth==0.2.13",
    "webob==1.8.9",
    "widgetsnbextension==4.0.13",
    "yarl==1.20.0",
    "zipp==3.20.2",
    "zstandard==0.23.0",
]
